# enno_sdk

./: .gitmodules  1-load-azure-umqtt.sh  2-build-umqtt.sh  3-build-enno.sh  CMakeLists.txt  README.md
enno_api/: enno_api.c  enno_api.h
sample/: sample_src.c
sample/Linux/: Makefile  debug.mak
sample/Linux2/: Makefile  debug.mak
sample/Openwrt/: Makefile  debug.mak
sample/Openwrt/alljoyn/: alljoyn.c
sample/Ubuntu/: Makefile  debug.mak
sample/Windows/: enno_device.sln  enno_device.vcxproj  enno_device.vcxproj.filters
